<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timestamp_hint" />

    <Spinner
        android:id="@+id/spinnerLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_hint" />

    <EditText
        android:id="@+id/editTextServerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_id_hint" />

</LinearLayout>
